--- a/public/exercise.html
+++ b/public/exercise.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Fitness Tracker</title>
 </head>
@@ -13,7 +14,7 @@
 <body>
   <nav>
     <a href="/">Fitness Tracker</a>
-    <a href="/stats">Dashboard</a>
+    <a href="/stats">Dashboard  <i class="fas fa-chart-bar"></i></a>
   </nav>
   <div class="wrapper">
     <header>
@@ -67,10 +68,11 @@
               <input type="number" name="resistance-duration" id="resistance-duration" placeholder="10" />
             </div>
           </div>
-          <div class="buttons">
-            <button disabled class="huge ui blue button complete">
+          <div class="ui buttons">
+            <button disabled class="huge ui brown button complete">
               Complete
             </button>
+            <div class="or"></div>
             <button disabled class="huge ui positive button add-another">
               Add Exercise
             </button>
