--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Fitness Tracker</title>
 </head>
 
 <body>
   <nav>
-    <a href="/">Fitness Tracker</a>
-    <a href="/stats">Dashboard</a>
+    <a href="/">Fitness Tracker  <i class="far fa-edit"></i></a>
+    <a href="/stats">Dashboard  <i class="fas fa-chart-bar"></i></a>
   </nav>
   <div class="wrapper workout">
     <header>
@@ -25,8 +26,9 @@
           <h3>Last Workout</h3>
           <div>
             <div class="workout-stats"></div>
-            <div class="buttons">
-              <a id="continue-btn" href="/exercise?" class="huge ui blue button">Continue Workout</a>
+            <div class="ui buttons">
+              <a id="continue-btn" href="/exercise?" class="huge ui brown button">Continue Workout</a>
+              <div class="or"></div>
               <a href="/exercise" class="huge positive ui button">New Workout</a>
             </div>
           </div>
