--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,12 @@
 
 <body>
   <nav>
-    <a href="/">Fitness Tracker  <i class="far fa-edit"></i></a>
-    <a href="/stats">Dashboard  <i class="fas fa-chart-bar"></i></a>
+    <button class="ui active button">
+      <a href="/" class="m-">Fitness Tracker  <i class="far fa-edit"></i></a>
+    </button>
+    <button class="ui active button">
+      <a href="/stats">Dashboard  <i class="fas fa-chart-bar"></i></a>
+    </button>
   </nav>
   <div class="wrapper workout">
     <header>
