--- a/public/exercise.html
+++ b/public/exercise.html
@@ -13,8 +13,12 @@
 
 <body>
   <nav>
-    <a href="/">Fitness Tracker</a>
-    <a href="/stats">Dashboard  <i class="fas fa-chart-bar"></i></a>
+    <button class="ui active button">
+      <a href="/">Fitness Tracker</a>
+    </button>
+    <button class="ui active button">
+      <a href="/stats">Dashboard  <i class="fas fa-chart-bar"></i></a>
+    </button>
   </nav>
   <div class="wrapper">
     <header>
