--- a/public/stats.html
+++ b/public/stats.html
@@ -11,11 +11,14 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <title>Fitness Chart</title>
   </head>
   <nav>
-    <a href="/">Fitness Tracker  <i class="far fa-edit"></i></a>
+    <button class="ui active button">
+      <a href="/">Fitness Tracker  <i class="far fa-edit"></i></a>
+    </button>
   </nav>
   <body>
     <div class="container mt">
